--- a/styles.css
+++ b/styles.css
@@ -15,127 +15,78 @@ img {
   max-width: 100%;
 }
 
-.btn {
-  display: inline-block;
-  padding: 0.5em 2em;
-  font-size: 1.5rem;
-  color: black;
-  background-color: rgb(45, 191, 219);
-  border-radius: 500px;
-  text-decoration: none;
-}
-
-/* typography */
-
-h1 {
-  font-size: 3rem;
-  margin-top: 0;
-}
-
 /* reusable components */
+.flex {
+  display: flex;
+}
+
+.row {
+  flex-direction: column;
+}
+
 .container {
   margin: 0 auto;
   width: 80%;
+  /* border: 3px solid red; */
 }
 
-.flex {
-  display: flex;
-  justify-content: space-between;
-}
-
-.col {
-  text-align: center;
-  width: 100%;
-}
-
-.col + .col {
-  margin-left: 30px;
-}
-
-/* direct styling */
 .hero {
+  height: 100vh;
   margin: 0 auto;
-  background-color: rgb(32, 63, 74);
-  padding: 50px 0px;
+  background-color: rgb(26, 26, 26);
+  padding: 40px;
+  align-items: center;
+  text-align: center;
 }
 
 .hero__text {
+  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  line-height: 2.5rem;
   color: white;
-  max-width: 750px;
-  width: 65%;
+  font-size: 2rem;
+  word-wrap: break-word;
 }
 
-.hero__img {
-  width: 30%;
+.highlight {
+  color: rgb(111, 168, 220);
 }
 
-.hero p {
-  font-size: 1.25rem;
-  margin: 1rem 0 3rem 0;
-}
-
-.main {
-  color: black;
+.section--title {
+  font-weight: bolder;
+  font-size: 3rem;
+  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0 auto;
-  background-color: white;
-  margin-top: 3em;
-  justify-content: space-between;
-}
-
-.main p {
-  font-size: 21px;
-  margin-top: 3rem;
-}
-
-.primary-content {
-  color: black;
-  max-width: 750px;
-  width: 65%;
-}
-
-.sidebar {
-  background-color: rgb(19, 108, 114);
+  padding: 2rem 0;
   color: white;
-  width: 30%;
 }
 
-.sidebar__item {
-  text-align: center;
-  width: 100%;
-  padding: 2em;
-}
-
-.subtitle {
-  font-size: 36px;
-}
-
-.subtitle--accent {
-  color: rgb(16, 108, 115);
-}
-
-.nav__list {
-  list-style-type: none;
-  display: flex;
-  justify-content: flex-start;
-  padding: 1em 0em;
-}
-
-.nav__item + .nav__item {
-  margin-left: 1rem;
-}
-.nav__link {
+.section--text {
+  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   color: white;
-  text-decoration: none;
-  font-size: 21px;
+  line-height: 1.5rem;
 }
 
-.nav__link--button {
-  color: rgb(62, 94, 110);
-  background-color: white;
-  padding: 0.25em 1em;
-  border-radius: 500px;
+.section {
+  min-height: 100vh;
+  background-color: rgb(26, 26, 26);
 }
 
-header {
-  background-color: rgb(62, 94, 110);
+.technologies {
+  border: 2px solid rgb(111, 168, 220);
+  border-radius: 10px;
+  max-width: 125px;
+}
+.technologies__item {
+  padding: 0.5rem 1.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile {
+  color: white;
 }
