--- a/styles.css
+++ b/styles.css
@@ -25,32 +25,36 @@ img {
 }
 
 .container {
+  align-items: center;
   margin: 0 auto;
   width: 80%;
-  /* border: 3px solid red; */
 }
 
-.hero {
-  height: 100vh;
-  margin: 0 auto;
+.section {
+  min-height: 100vh;
   background-color: rgb(26, 26, 26);
-  padding: 40px;
-  align-items: center;
+}
+
+/* typography */
+
+.hero__text {
+  color: white;
+  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
+  font-size: 2rem;
+  font-weight: 300;
+  margin: 0 auto;
+  line-height: 2.5rem;
   text-align: center;
 }
 
-.hero__text {
+.section--text {
   font-family: 'Playfair Display', serif;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  line-height: 2.5rem;
   color: white;
-  font-size: 2rem;
-  word-wrap: break-word;
-}
-
-.highlight {
-  color: rgb(111, 168, 220);
+  line-height: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .section--title {
@@ -63,30 +67,126 @@ img {
   color: white;
 }
 
-.section--text {
+.highlight {
+  color: rgb(111, 168, 220);
+}
+
+/* direct styling */
+
+.hero {
+  align-items: center;
+}
+
+.technologies {
+  /* justify-content: center;
+  border: 3px solid coral; */
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.technologies__item {
+  padding: 0.5rem 1.5rem;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid rgb(111, 168, 220); */
+  border-radius: 10px;
+  width: 75px;
+}
+
+.technologies__item__image {
+  width: 27px;
+  height: 27px;
+}
+
+.technologies__item--text {
+  font-size: 0.75rem;
   font-family: 'Playfair Display', serif;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   color: white;
   line-height: 1.5rem;
-}
-
-.section {
-  min-height: 100vh;
-  background-color: rgb(26, 26, 26);
-}
-
-.technologies {
-  border: 2px solid rgb(111, 168, 220);
-  border-radius: 10px;
-  max-width: 125px;
-}
-.technologies__item {
-  padding: 0.5rem 1.5rem;
-  justify-content: center;
-  align-items: center;
+  padding: none;
 }
 
 .profile {
   color: white;
+}
+
+.form__input {
+  background-color: rgb(40, 40, 40);
+  border: none;
+  color: white;
+  width: 100%;
+  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+  padding: 0.25rem 0.5rem;
+  margin: 0.125rem 0;
+}
+
+.footer {
+  height: 10rem;
+  background-color: rgb(40, 40, 40);
+}
+
+.header {
+  align-items: center;
+  justify-content: center;
+  height: 2.5rem;
+  background-color: rgba(40, 40, 40, 0.8);
+  position: fixed;
+  width: 100vw;
+  backdrop-filter: blur(20px);
+}
+
+.navabr__list {
+  font-weight: 400;
+  margin: 0 auto;
+  list-style: none;
+  color: white;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navbar__list--item--link {
+  transition: 0.25s;
+}
+
+.navbar__list--item--link {
+  text-decoration: none;
+  color: white;
+}
+
+.navbar__list--item--link:hover {
+  color: rgb(111, 168, 220);
+}
+
+/* .active {
+  color: rgb(111, 168, 220);
+} */
+
+.about__image {
+  justify-self: center;
+  width: 60%;
+  margin-bottom: 2rem;
+}
+
+.hero__cta {
+  background-color: none;
+  display: inline-block;
+  border: none;
+  padding: 1rem 2rem;
+  margin: 0;
+  text-decoration: none;
+  background: transparent;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: 2px solid rgb(111, 168, 220);
 }
