project section added

--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,74 @@ img {
   padding-left: 0.5em;
 }
 
+.project-card {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.project-card__image-container {
+  width: 55%;
+
+  position: relative;
+  background: var(--brand-key);
+}
+.project-card__image-container {
+  width: 60%;
+  border-radius: 10px 0px 0px 50px;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.project-card__image {
+  width: 80%;
+  height: 80%;
+}
+
+.project-card__info {
+  width: 40%;
+  border-radius: 0px 50px 10px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 2em;
+  background-color: var(--header-bg);
+}
+
+.project-card__info--title {
+  font-size: 2rem;
+  margin-bottom: 0.25em;
+}
+.project-card__info--subtitle {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0.25em;
+}
+
+.project-card__info--description {
+  font-size: 1rem;
+  line-height: 1.6em;
+  margin-bottom: 0.25em;
+}
+
+.project-card__info--link {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  text-decoration: underline;
+  text-decoration-color: var(--brand-key);
+  text-decoration-thickness: 0.2em;
+  color: white;
+  transition: 0.5s;
+}
+
+.project-card__info--link:hover {
+  text-decoration-thickness: 0.4em;
+}
+
 /* ------------------------------ */
 /* || XSmall Screen Break || */
 /* ------------------------------ */
@@ -309,11 +377,147 @@ img {
   }
 }
 
+.project-card {
+  width: 100%;
+  max-height: 14rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.project-card__image-container {
+  width: 50%;
+  position: relative;
+  background: var(--brand-key);
+}
+.project-card__image-container {
+  width: 50%;
+  border-radius: 10px 0px 0px 40px;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.project-card__image {
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.project-card__info {
+  width: 50%;
+  border-radius: 0px 40px 10px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 2em;
+  background-color: var(--header-bg);
+}
+
+.project-card__info--title {
+  font-size: 0.5rem;
+  margin-bottom: 0.25em;
+}
+.project-card__info--subtitle {
+  font-size: 0.5rem;
+  font-weight: bold;
+  margin-bottom: 0.25em;
+}
+
+.project-card__info--description {
+  font-size: 0.75rem;
+  line-height: 1.6em;
+  margin-bottom: 0.25em;
+}
+
+.project-card__info--link {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  text-decoration: underline;
+  text-decoration-color: var(--brand-key);
+  text-decoration-thickness: 0.2em;
+  color: white;
+  transition: 0.5s;
+}
+
+.project-card__info--link:hover {
+  text-decoration-thickness: 0.4em;
+}
+
 /* ------------------------------ */
 /* || Small Screen Break || */
 /* ------------------------------ */
 @media only screen and (min-width: 600px) {
   /* typography */
+
+  .project-card {
+    max-height: 18rem;
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+  }
+
+  .project-card__image-container {
+    width: 55%;
+
+    position: relative;
+    background: var(--brand-key);
+  }
+  .project-card__image-container {
+    width: 60%;
+    border-radius: 10px 0px 0px 50px;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .project-card__image {
+    width: 80%;
+    height: 80%;
+  }
+
+  .project-card__info {
+    width: 40%;
+    border-radius: 0px 50px 10px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 2em;
+    background-color: var(--header-bg);
+  }
+
+  .project-card__info--title {
+    font-size: 1.5rem;
+    margin-bottom: 0.25em;
+  }
+  .project-card__info--subtitle {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 0.25em;
+  }
+
+  .project-card__info--description {
+    font-size: 0.5rem;
+    line-height: 1.6em;
+    margin-bottom: 0.25em;
+  }
+
+  .project-card__info--link {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+    text-decoration: underline;
+    text-decoration-color: var(--brand-key);
+    text-decoration-thickness: 0.2em;
+    color: white;
+    transition: 0.5s;
+  }
+
+  .project-card__info--link:hover {
+    text-decoration-thickness: 0.4em;
+  }
 
   .footer__text {
     font-size: 1rem;
@@ -455,6 +659,11 @@ img {
   }
 }
 
+.split-divs {
+  width: 100%;
+  justify-content: space-between;
+}
+
 /* ------------------------------ */
 /* || large display break|| */
 /* ------------------------------ */
@@ -521,4 +730,72 @@ img {
   .split {
     max-width: 40%;
   }
+}
+
+.project-card {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.project-card__image-container {
+  width: 55%;
+
+  position: relative;
+  background: var(--brand-key);
+}
+.project-card__image-container {
+  width: 60%;
+  border-radius: 10px 0px 0px 50px;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.project-card__image {
+  width: 80%;
+  height: 80%;
+}
+
+.project-card__info {
+  width: 40%;
+  border-radius: 0px 50px 10px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 2em;
+  background-color: var(--header-bg);
+}
+
+.project-card__info--title {
+  font-size: 2rem;
+  margin-bottom: 0.25em;
+}
+.project-card__info--subtitle {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0.25em;
+}
+
+.project-card__info--description {
+  font-size: 1rem;
+  line-height: 1.6em;
+  margin-bottom: 0.25em;
+}
+
+.project-card__info--link {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  text-decoration: underline;
+  text-decoration-color: var(--brand-key);
+  text-decoration-thickness: 0.2em;
+  color: white;
+  transition: 0.5s;
+}
+
+.project-card__info--link:hover {
+  text-decoration-thickness: 0.4em;
 }
