--- a/styles.css
+++ b/styles.css
@@ -527,7 +527,9 @@ img {
 }
 
 .project-container {
+  display: flex;
   flex-direction: row;
+  width: 100%;
 }
 
 /* ------------------------------ */
