--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,152 @@
-/* || resets/genera || */
+/* -------------------- */
+/* Resets */
+/* -------------------- */
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+/* Remove default margin in favour of better control in authored CSS */
+body, h1, h2, h3, h4, p,
+figure, blockquote, dl, dd {
+  margin-block-end: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  line-height: 1.5;
+}
+
+/* Set shorter line heights on headings and interactive elements */
+h1, h2, h3, h4,
+button, input, label {
+  line-height: 1.1;
+}
+
+/* Balance text wrapping on headings */
+h1, h2,
+h3, h4 {
+  text-wrap: balance;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input, button,
+textarea, select {
+  font: inherit;
+}
+
+/* Make sure textareas without a rows attribute are not tiny */
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+/* Anything that has been anchored to should have extra scroll margin */
+:target {
+  scroll-margin-block: 5ex;
+}
+
+/* -------------------- */
+/* Custom Variables */
+/* -------------------- */
 :root {
   --brand-key: #468fd2;
   --section-title-highlight: #468fd2;
   --gradient: linear-gradient(#468fd2, #b698f6ff) 10;
   --dark-bg: rgb(26, 26, 26);
   --header-bg: rgba(40, 40, 40, 0.7);
+  --text-light: white;
 }
 
-html {
-  scroll-behavior: smooth;
+/* -------------------- */
+/* Utility Classes */
+/* -------------------- */
+.flex {
+  display: flex;
 }
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+
+/* -------------------- */
+/* General Styling */
+/* -------------------- */
 
 body {
   background-color: var(--dark-bg);
   margin: 0;
   font-family: 'Playfair Display', serif;
   font-family: 'Roboto', sans-serif;
-  color: white;
+  color: var(--text-light);
+}
+
+.header {
+  z-index: 100;
+  background-color: var(--header-bg);
+  position: fixed;
+  width: 100vw;
+  backdrop-filter: blur(20px);
+}
+
+.nav {
+  z-index: inherit;
+  width: 100%;
+  height: 3em;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav__list {
+  z-index: inherit;
+  list-style: none;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 80%;
+}
+
+
+.nav__link {
+  color: var(--text-light);
+  text-decoration: none;
+}
+
+/* || resets/genera || */
+/* 
+html {
+  scroll-behavior: smooth;
+}
+
+
+body {
+ 
 }
 
 img {
@@ -29,11 +154,9 @@ img {
 }
 
 /* || reusable components || */
-.flex {
-  display: flex;
-}
 
-.row {
+
+/* .row {
   flex-direction: column;
 }
 
@@ -47,10 +170,10 @@ img {
 .section {
   margin: 0 auto;
   margin-bottom: 4rem;
-}
+} */
 
 /* typography */
-.cta__text {
+/* .cta__text {
   font-size: 1.25rem;
   display: flex;
   align-items: center;
@@ -131,41 +254,15 @@ img {
   font-size: 0.75rem;
   font-weight: 600;
   color: white;
-}
+} */
 
 /* || header/navbar styling || */
-.header {
-  z-index: 100;
-  align-items: center;
-  background-color: var(--header-bg);
-  position: fixed;
-  width: 100vw;
-  backdrop-filter: blur(20px);
-}
-
-.navbar {
-  display: flex;
-  z-index: inherit;
-  margin: 0 auto;
-  width: 60%;
-  height: 3em;
-  justify-content: center;
-  align-items: center;
-}
-
-.navabr__list {
-  z-index: inherit;
-  list-style: none;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-.navbar__list--item + .navbar__list--item {
+/* .navbar__list--item + .navbar__list--item {
   margin-left: 1rem;
-}
+} */ */
 
 /* || hero styling || */
-.hero--section {
+/* .hero--section {
   align-items: center;
   min-height: 100vh;
 }
@@ -189,10 +286,10 @@ img {
 .hero__cta__icon {
   max-width: 1.25rem;
   max-height: 1.25rem;
-}
+} */
 
 /* || About Styling || */
-.about__image {
+/* .about__image {
   width: 50%;
   margin-bottom: 1rem;
   max-width: 400px;
@@ -221,7 +318,7 @@ img {
 }
 
 /* || Contact Styling || */
-.form__input {
+/* .form__input {
   background-color: rgb(40, 40, 40);
   border: none;
   color: white;
@@ -253,10 +350,10 @@ img {
 
 .ml-1 {
   margin-left: 1em;
-}
+} */ */
 
 /* || Footer Styling || */
-.footer {
+/* .footer {
   height: 10rem;
   background-color: rgb(40, 40, 40);
   align-items: center;
@@ -301,7 +398,7 @@ img {
   transition: 2.5s;
   overflow: hidden;
   -webkit-filter: grayscale(20%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(20%);
+  /* filter: grayscale(20%);
 }
 
 .project-container {
@@ -318,16 +415,16 @@ img {
 .project:hover {
   border-radius: 3em 1.5em;
   -webkit-filter: none; /* Safari 6.0 - 9.0 */
-  filter: none;
-}
-.project-text {
-  padding: 1em;
-}
+  /* filter: none;
+} */
+/* .project-text { */
+  /* padding: 1em;
+} */ */
 
-.project-text__title {
+/* .project-text__title {
   font-size: 2rem;
-  padding-top: 0.25em;
-  padding-bottom: 0.5em;
+  padding-top: 0.25em; */
+  /* padding-bottom: 0.5em;
 }
 .project-text__description {
   font-size: 1rem;
@@ -359,13 +456,13 @@ img {
 
 #projects {
   flex-direction: column;
-}
+} */ */
 
 /* ------------------------------ */
 /* || XSmall Screen Break || */
 /* ------------------------------ */
 
-@media only screen and (max-width: 400px) {
+/* @media only screen and (max-width: 400px) {
   .technologies__item {
     padding: 0.25em 0.2em;
   }
@@ -381,25 +478,25 @@ img {
   .technologies__item--text {
     font-size: 0.5rem;
   }
-}
+} */
 
 /* ------------------------------ */
 /* || Small Screen Break || */
 /* ------------------------------ */
-@media only screen and (min-width: 600px) {
+/* @media only screen and (min-width: 600px) { */
   /* typography */
 
-  .footer__text {
+  /* .footer__text {
     font-size: 1rem;
-  }
+  } */
 
   /* || header/navbar styling || */
-  .navbar {
+  /* .navbar {
     width: 50%;
-  }
+  } */
 
   /* || About Styling || */
-  .about__image {
+  /* .about__image {
     width: 40%;
   }
 
@@ -410,31 +507,31 @@ img {
   .technologies__item {
     padding: 0.25em 1.25em;
     border-width: 3px;
-  }
+  } */
 
-  .technologies__item__image {
+  /* .technologies__item__image {
     width: 48px;
     height: 48px;
-  }
+  } */
 
   /* || Contact Styling || */
-  .form__input {
+  /* .form__input {
     font-size: 1.25rem;
     margin: 0.25em 0;
     padding: 0.25em 0.5em;
-  }
+  } */
 
   /* || Footer Styling || */
-  .footer__image {
+  /* .footer__image {
     height: 64px;
     width: 64px;
   }
-}
+} */
 
 /* ------------------------------ */
 /* || Medium Screen Break || */
 /* ------------------------------ */
-@media only screen and (min-width: 900px) {
+/* @media only screen and (min-width: 900px) {
   .container {
     width: 80%;
     max-width: 1500px;
@@ -443,10 +540,10 @@ img {
   .section {
     background-color: rgb(26, 26, 26);
     margin-bottom: 4rem;
-  }
+  } */
 
   /* typography */
-  .cta__text {
+  /* .cta__text {
     font-size: 1.5rem;
   }
 
@@ -479,17 +576,17 @@ img {
   }
 
   /* || header/navbar styling || */
-  .navbar {
+  /* .navbar {
     width: 90%;
   }
 
   .navabr {
     justify-content: flex-end;
-  }
+  } */ */
 
-  /* || About Styling || */
-  .about__image {
-    width: 35%;
+  /* || About Styling ||
+  .about__image { */
+    /* width: 35%;
   }
 
   .technologies {
@@ -504,59 +601,59 @@ img {
   .technologies__item__image {
     width: 64px;
     height: 64px;
-  }
+  } */
 
   /* || Contact Styling || */
-  .form__input {
+  /* .form__input {
     font-size: 1rem;
     margin: 0.125rem 0;
     padding: 0.25rem 0.5em;
     resize: none;
     width: 100%;
-  }
+  } */
 
   /* || Footer Styling || */
-  .footer {
+  /* .footer {
     height: 10rem;
     background-color: rgb(40, 40, 40);
     align-items: center;
     justify-content: center;
-  }
-
+  } */
+/* 
   .footer__image {
     height: 64px;
     width: 64px;
   }
-}
+} */
 
-.split-divs {
+/* .split-divs {
   width: 100%;
   justify-content: space-between;
-}
+} */
 
-.project-container {
+/* .project-container {
   display: flex;
   flex-direction: row;
   width: 100%;
-}
+} */
 
-.project-card-container {
+/* .project-card-container {
   display: flex;
   flex-direction: row;
-}
+} */
 
 /* ------------------------------ */
 /* || large display break|| */
 /* ------------------------------ */
-@media only screen and (min-width: 1200px) {
+/* @media only screen and (min-width: 1200px) {
   .split-divs {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
+  } */
 
   /* || About Styling || */
-
+/* 
   .technologies__item {
     padding: 0.5rem 0.75rem;
   }
@@ -564,11 +661,11 @@ img {
   .technologies__item__image {
     width: 36px;
     height: 36px;
-  }
+  } */
 
   /* || Contact Styling || */
-  .form__input {
-    background-color: rgb(40, 40, 40);
+  /* .form__input { */
+    /* background-color: rgb(40, 40, 40);
     border: none;
     color: white;
     font-family: 'Playfair Display', serif;
@@ -579,22 +676,22 @@ img {
     padding: 0.25rem 0.5em;
     resize: none;
     width: 100%;
-  }
+  } */
 
   /* || Footer Styling || */
-  .footer {
+  /* .footer {
     height: 10rem;
     background-color: rgb(40, 40, 40);
     align-items: center;
     justify-content: center;
-  }
+  } */
 
-  .footer__image {
+  /* .footer__image {
     height: 64px;
     width: 64px;
-  }
+  } */
 
-  #canvas1 {
+  /* #canvas1 {
     z-index: -1;
     position: absolute;
     top: 0;
@@ -602,13 +699,13 @@ img {
     width: 100vw;
     height: 100vh;
     background: rgb(26, 26, 26);
-  }
-
+  } */
+/* 
   #hero {
     z-index: 1;
-  }
+  } */
 
-  .split {
+  /* .split {
     max-width: 40%;
   }
-}
+} */ */ */
