--- a/styles.css
+++ b/styles.css
@@ -89,16 +89,16 @@ textarea:not([rows]) {
   --text-light: white;
 }
 
-/* -------------------- */
-/* Utility Classes */
-/* -------------------- */
-.flex {
-  display: flex;
-}
+
+
 
 /* -------------------- */
 /* General Styling */
 /* -------------------- */
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   background-color: var(--dark-bg);
@@ -108,6 +108,32 @@ body {
   color: var(--text-light);
 }
 
+
+/* -------------------- */
+/* Utility Classes */
+/* -------------------- */
+.flex {
+  display: flex;
+}
+
+.section__container {
+  min-height: 100vh;
+  display: flex;
+    width: 90%;
+  max-width: 1500px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.highlight{
+  color: var(--brand-key);
+}
+
+
+/* -------------------- */
+/* Header Styling */
+/* -------------------- */
 .header {
   z-index: 100;
   background-color: var(--header-bg);
@@ -135,53 +161,72 @@ body {
   width: 80%;
 }
 
-
 .nav__link {
   color: var(--text-light);
   text-decoration: none;
 }
 
+#particles {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(26, 26, 26);
+}
+
+
+
+.hero-typography {
+  font-size: 2rem;
+  font-weight: 300;
+  line-height: 2.5rem;
+  text-align: center;
+}
+
+.hero-cta-typography {
+
+}
+
+.hero__cta {
+  border: 3px solid var(--brand-key);
+  color: var(--brand-key);
+  cursor: pointer;
+  margin-top: 1em;
+  padding: 0.25em 1em;
+  text-decoration: none;
+  transition: 1s;
+}
+
+.hero__cta:hover {
+  background-color: var(--brand-key);
+  color: var(--text-light)
+}
+
+.hero__cta__icon {
+  max-width: 1.25rem;
+  max-height: 1.25rem;
+} 
 
 @media only screen and (min-width: 900px) {
-.header {
+  .header {
   font-size: 1.5rem;
 }
-}
-
-
-/* || resets/genera || */
-/* 
-html {
-  scroll-behavior: smooth;
-}
-
-
-body {
- 
-}
-
-img {
-  max-width: 100%;
-}
-
-/* || reusable components || */
-
-
-/* .row {
-  flex-direction: column;
-}
-
-.container {
-  align-items: center;
-  margin: 0 auto;
-  width: 90%;
+  .section-container {
+  width: 80%;
   max-width: 1500px;
 }
+}
 
-.section {
+
+
+
+
+/* .section {
   margin: 0 auto;
   margin-bottom: 4rem;
-} */
+} */ 
 
 /* typography */
 /* .cta__text {
@@ -199,11 +244,7 @@ img {
 }
 
 .hero__text {
-  font-size: 2rem;
-  font-weight: 300;
-  line-height: 2.5rem;
-  margin: 0 auto;
-  text-align: center;
+
 }
 
 .navbar--text {
@@ -278,26 +319,7 @@ img {
   min-height: 100vh;
 }
 
-.hero__cta {
-  border: 3px solid var(--brand-key);
-  color: var(--brand-key);
-  cursor: pointer;
-  margin-top: 1em;
-  padding: 0.25em 1em;
-  text-decoration: none;
-  transition: 1s;
-}
-
-.hero__cta:hover {
-  background-color: var(--brand-key);
-  color: white;
-  fill: white;
-}
-
-.hero__cta__icon {
-  max-width: 1.25rem;
-  max-height: 1.25rem;
-} */
+*/
 
 /* || About Styling || */
 /* .about__image {
@@ -387,15 +409,7 @@ img {
   margin-left: 1em;
 }
 
-#particles {
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgb(26, 26, 26);
-}
+
 
 #hero {
   z-index: 1;
@@ -543,9 +557,7 @@ img {
 /* || Medium Screen Break || */
 /* ------------------------------ */
 /* @media only screen and (min-width: 900px) {
-  .container {
-    width: 80%;
-    max-width: 1500px;
+ 
   }
 
   .section {
